style.css
.container-fluid{
    width: 100%;
}

.navbar-brand{
    font-size: 20px;
    background-color: turquoise;
    font-weight: bold;
    color: white;
}

.navbar-nav{
    list-style-type: none;
    text-align: left;
}

.navbar-nav li{
    display: inline-block;
    font-size: 16px;
    /* margin: 5px; */
    margin-top: 10px;
    color: black;
}

.nav-align-custom{
    display: flex;
    justify-content: flex-end;
}

.jumbotron{
    padding: 40px;
    margin-top: 80px;
    margin-right: 20px;
    margin-bottom: 120px;
    margin-left: 20px;
    background-color: white;
}


.portfolio-image{
    width: 100%;
    margin: 20px;
}

.display-4{
    color: turquoise;
}

.btn-primary{
    background-color: turquoise;
    color: white;
}

footer{
    background-color: black;
    height: 60px;
    width: 100%;
    position: fixed;
    left: 0;
    bottom: 0;
    border-top: 5px solid turquoise;
}

.footer-top-row{
    background-color: turquoise;
    height: 5px;
}

.footer-text{
    text-align: center;
    color: darkgray;
    padding-top: 15px;
}

@media screen and (max-width: 764px){
    /* .jumbotron { background-color: lightgoldenrodyellow; */
        .jumbotron { background-image: url(https://www.stockvault.net/data/2018/10/11/255106/preview16.jpg);
                    background-repeat: y;
        }
    }

